--- a/src/app/todo-list/todo-list.component.scss
+++ b/src/app/todo-list/todo-list.component.scss
@@ -1,3 +1,14 @@
 .todo-card{
     margin-bottom: 1.5rem;
   }
+
+  .card-content{
+    background-color: whitesmoke;
+  }
+
+  .button-container{
+    margin-bottom: 1.5rem;
+    display: flex;
+    justify-content: end;
+  }
+  
